// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledAfter fails when given a first mock has not been called 1`] = `
"expect(received).not.toHaveBeenCalledAfter(expected)

Expected first mock to not have been called after, invocationCallOrder:
  []
Received second mock with invocationCallOrder:
  []"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after second mock 1`] = `
"expect(received).not.toHaveBeenCalledAfter(expected)

Expected first mock to not have been called after, invocationCallOrder:
  [19]
Received second mock with invocationCallOrder:
  [18]"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after several calls to second mock 1`] = `
"expect(received).not.toHaveBeenCalledAfter(expected)

Expected first mock to not have been called after, invocationCallOrder:
  [26, 27, 28]
Received second mock with invocationCallOrder:
  [25]"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock is called before multiple calls to second mock 1`] = `
"expect(received).toHaveBeenCalledAfter(expected)

Expected first mock to have been called after, invocationCallOrder:
  [6, 8]
Received second mock with invocationCallOrder:
  [7, 9, 10]"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock that has been called and a second mock that has not been called 1`] = `
"expect(received).toHaveBeenCalledAfter(expected)

Expected first mock to have been called after, invocationCallOrder:
  [1]
Received second mock with invocationCallOrder:
  []"
`;

exports[`.toHaveBeenCalledAfter fails when given second mock is called after first mock 1`] = `
"expect(received).toHaveBeenCalledAfter(expected)

Expected first mock to have been called after, invocationCallOrder:
  [4000]
Received second mock with invocationCallOrder:
  [5000]"
`;
